load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_library", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "dummy_context__sig",
    src = ":dummy_context.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "dummy_context",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":dummy_context__sig",
    struct = ":dummy_context.ml",
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "environment_V0__sig",
    src = ":environment_V0.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V0",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_V0",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":environment_V0__sig",
    struct = ":environment_V0.ml",
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V0",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "environment_V1__sig",
    src = ":environment_V1.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V1",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_V1",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":environment_V1__sig",
    struct = ":environment_V1.ml",
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V1",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "environment_V2__sig",
    src = ":environment_V2.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V2",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_V2",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":environment_V2__sig",
    struct = ":environment_V2.ml",
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V2",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "environment_V3__sig",
    src = ":environment_V3.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V3",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_V3",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":environment_V3__sig",
    struct = ":environment_V3.ml",
    deps = [
        ":environment_context",
        ":environment_protocol_T",
        ":environment_protocol_T_V3",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "environment_context__sig",
    src = ":environment_context.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_context",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":environment_context__sig",
    struct = ":environment_context.ml",
    deps = [
        ":environment_context_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_context_intf",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_context_intf.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_protocol_T",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_protocol_T.ml",
    deps = [
        ":environment_context",
        ":environment_protocol_T_V0",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_protocol_T_V0",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_protocol_T_V0.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_protocol_T_V1",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_protocol_T_V1.ml",
    deps = [
        ":environment_protocol_T_V0",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_protocol_T_V2",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_protocol_T_V2.ml",
    deps = [
        ":environment_protocol_T_V1",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "environment_protocol_T_V3",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    struct = ":environment_protocol_T_V3.ml",
    deps = [
        ":environment_protocol_T_V2",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "memory_context__sig",
    src = ":memory_context.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "memory_context",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":memory_context__sig",
    struct = ":memory_context.ml",
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "proxy_context__sig",
    src = ":proxy_context.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "proxy_context",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":proxy_context__sig",
    struct = ":proxy_context.ml",
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_signature(
    name = "tezos_protocol_environment__sig",
    src = ":tezos_protocol_environment.mli",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    deps = [
        ":environment_V0",
        ":environment_V1",
        ":environment_V2",
        ":environment_context",
        ":environment_protocol_T",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

ocaml_module(
    name = "tezos_protocol_environment",
    deps_opam = ["lwt-dllist"],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_micheline",
    ],
    sig = ":tezos_protocol_environment__sig",
    struct = ":tezos_protocol_environment.ml",
    deps = [
        ":environment_V0",
        ":environment_V1",
        ":environment_V2",
        ":environment_context",
        ":environment_protocol_T",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context/memory:#Tezos_context_memory",
        "@tezos//src/lib_micheline:#Tezos_micheline",
        "@tezos//src/lib_protocol_environment/sigs:#Tezos_protocol_environment_sigs",
        "@tezos//src/lib_protocol_environment/structs:#Tezos_protocol_environment_structs",
        "@tezos//src/lib_sapling:#Tezos_sapling",
    ],
)

# okapi:public_name tezos-protocol-environment
ocaml_library(
    name = "lib-tezos_protocol_environment",
    modules = [
        ":dummy_context",
        ":environment_V0",
        ":environment_V1",
        ":environment_V2",
        ":environment_V3",
        ":environment_context",
        ":environment_context_intf",
        ":environment_protocol_T",
        ":environment_protocol_T_V0",
        ":environment_protocol_T_V1",
        ":environment_protocol_T_V2",
        ":environment_protocol_T_V3",
        ":memory_context",
        ":proxy_context",
        ":tezos_protocol_environment",
    ],
    visibility = ["//visibility:public"],
)

ocaml_signature(
    name = "shell_context__sig",
    src = ":shell_context.mli",
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context:#Tezos_context",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
    ],
)

ocaml_module(
    name = "shell_context",
    sig = ":shell_context__sig",
    struct = ":shell_context.ml",
    deps = [
        ":environment_context",
        ":tezos_protocol_environment",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_context:#Tezos_context",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
    ],
)

# okapi:public_name tezos-shell-context
ocaml_ns_library(
    name = "#Tezos_shell_context",
    submodules = [":shell_context"],
    visibility = ["//visibility:public"],
)
